Refactoring Add lombok dependency